--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.teraprath</groupId>
     <artifactId>points</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.0-STABLE</version>
     <packaging>jar</packaging>
 
     <name>PointsAPI</name>
